--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ Book
       <br><br>
 <button class="btn btn-success" onclick="takesnapshot();">Take Snapshot</button>
 <button class="btn btn-danger" onclick="find();">Check Image</button>
-      <p style="font-size: 22px;">Object :  <span id="result-name"></span></p>
-      <p style="font-size: 22px;">Accuracy : <span id="result-accuracy"></span>  </p>
+      <p style="font-size: 22px;">Object :  <span id="result_name"></span></p>
+      <p style="font-size: 22px;">Accuracy : <span id="result_accuracy"></span>  </p>
     </center>
 
   </div>
